# SimpleSocket

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: SSocket.cpp  SSocket.hpp
source/: SSocket.cpp  SSocket.hpp  example.cpp
